test/errors/parametrized_types_error/zs/referenced_non_parametrized_type_error.zs
package referenced_non_parametrized_type_error;

struct Item
{
    uint16      param;
    uint32      extraParam;
};

struct ItemHolder
{
    uint32          version;
    Item(version)   item;
};
